# ssl_abstraction

./: .gitignore  CMakeLists.txt  README.md  ssl_abstraction.hpp  ssl_certificate.hpp  ssl_client.cpp  ssl_crt_signing_request.hpp  ssl_defs.hpp  ssl_generator.cpp  ssl_key_pair.hpp  ssl_server.cpp
crt/: delete_root_certificate.sh  delete_test_certificate.sh  delete_user_certificate.sh  generate_root_certificate.sh  generate_user_certificate.sh
